--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -1,3 +1,12 @@
 ---
 layout: default
 ---
+
+<div class="siema">
+  {%- for news in page.news -%}
+    <div class="news-element" style="background-image: url({{page.news-background}})">
+      <span>artinfo news</span>
+      <p>{{news-title}}</p>
+    </div>
+  {%- endfor -%}
+</div>
