--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+  <script src="/assets/javascript/jquery-3.2.1.min.js"></script>
   <script src="/assets/javascript/siema.js"></script>
 
 </head>
