--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -24,3 +24,9 @@ layout: default
     setInterval(() => Siemano.next(), 3500)
   </script>
 {%- endif -%}
+
+<div class="advert-wrapper">
+  <a href="{{page.advert-first-link}}" class="advert">
+    <img src="{{page.advert-first-image}}" alt="">
+  </a>
+</div>
