--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -25,8 +25,8 @@ layout: default
   </script>
 {%- endif -%}
 
-<div class="advert-wrapper">
-  <a href="{{page.advert-first-link}}" class="advert">
-    <img src="{{page.advert-first-image}}" alt="">
+<div class="adv-wrapper">
+  <a href="{{page.advert-first.advert-first-link}}" class="adv">
+    <img src="{{page.advert-first.advert-first-image}}" alt="">
   </a>
 </div>
