--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -29,3 +29,13 @@
   min-height: 300px;
   background-size: cover;
 }
+
+.adv-wrapper {
+  height: 160px;
+  padding-top: 30px;
+  width: 100%;
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
