--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,6 @@
----
-layout: default
----
-
-
-
-kekz
+<div class="news__latest">
+  <img src="{{page.image}}" alt="">
+  <div class="news__latest-text">
+    {{ content }}
+  </div>
+</div>
