--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,8 @@
 @import "styles/reset";
 @import "styles/normalize";
+@import "styles/utlis";
+@import "styles/layout";
+@import "styles/typography";
 @import "styles/common";
 @import "styles/landing";
+@import "styles/blog";
