--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -20,8 +20,8 @@ img {
   margin: auto;
   max-width: 1280px;
   width: 100%;
-  padding-right: 30px;
-  padding-left: 30px;
+  padding-right: 60px;
+  padding-left: 60px;
   margin-right: auto;
   margin-left: auto;
 
@@ -43,4 +43,13 @@ img {
   width: 25%;
   min-width: 250px;
   height: auto;
+}
+
+.button {
+	height: 48px;
+	width: 225px;
+  font-size: 15px;
+	border: 2px solid #F3F3F3;
+	border-radius: 24px;
+	background-color: #FFFFFF;
 }
