--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -9,6 +9,10 @@ a {
   font-size: 14px;
 }
 
+h3 {
+  font-size: 28px;
+}
+
 .text {
   &-center {
     text-align: center;
@@ -19,6 +23,6 @@ a {
   }
 
   &-right {
-    text-align: right;  
+    text-align: right;
   }
 }
