--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Nunito:400,600');
+
 @import "styles/reset";
 @import "styles/normalize";
 @import "styles/utlis";
@@ -6,3 +8,4 @@
 @import "styles/common";
 @import "styles/landing";
 @import "styles/blog";
+@import "styles/tabs";
