--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -2,41 +2,21 @@
   box-sizing: border-box;
 }
 
-body {
-  font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial,
-    'Lucida Grande', sans-serif;
-  font-weight: 300;
-  font-size: 16px;
-  margin: 0;
-  padding: 0;
-  background-color: #fbfcfd;
+html, body {
+  background-color: $color-catskill-white;
+  font-size: $base-font-size;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body, a {
+  font-family: $base-font-family;
+  line-height: $base-line-height;
+  color: $base-font-color;
 }
 
 img {
   max-width: 100%;
-}
-
-.container {
-  margin: auto;
-  max-width: 1280px;
-  width: 100%;
-  padding-right: 60px;
-  padding-left: 60px;
-  margin-right: auto;
-  margin-left: auto;
-
-  &--no-padding {
-    padding: 0;
-  }
-
-  &--adw {
-    background-color: #F3F3F3;
-  }
-
-  &--search {
-    justify-content: center;
-    min-height: 200px
-  }
 }
 
 .image {
@@ -52,4 +32,8 @@ img {
 	border: 2px solid #F3F3F3;
 	border-radius: 24px;
 	background-color: #FFFFFF;
+}
+
+.section_header {
+  padding-bottom: 25px;
 }
