--- a/src/styles/utlis.scss
+++ b/src/styles/utlis.scss
@@ -1,2 +1,53 @@
-$primary-color: #108db8;
-$link-color: #FF5D00;
+// App widths
+$max-app-width: 1280px;
+$gutter-width: 30px;
+$col-width: 75px;
+
+// Colors
+$color-catskill-white: #fbfcfd;
+$color-tuna: #363a42;
+$color-orange: #ff5d00;
+$color-manatee: #8a8d99;
+$color-trout: #525967;
+$color-white: #fff;
+$color-grey-light: #f3f3f3;
+$color-grey: #d8d9de;
+$color-green: #32e367;
+$color-green-dark: #3bb861;
+$color-delivery-method-error: #cc3333;
+$color-conditionally-transaction: #c08f3d;
+
+// Font sizes
+$font-size-small: 12px;
+$font-size-normal: 15px;
+$font-size-medium: 18px;
+$font-size-large: 24px;
+$font-size-x-large: 28px;
+
+// Font weights
+$light: 100;
+$regular: 400;
+$bold: 600;
+
+// Base Font
+$base-font-family: "Nunito", sans-serif;
+$base-font-weight: $regular;
+$base-font-size: $font-size-normal;
+$base-line-height: 1.42857143;
+$base-font-color: $color-tuna;
+
+// Base styles
+$base-border-radius: 100px;
+$base-box-shadow: 0 2px 6px 1px rgba(92,94,102, .15);
+
+// sass-rem settings
+$rem-baseline: $base-font-size;
+
+// Media queries breakpoints
+$screen-xs: 480px;
+$screen-sm: 768px;
+$screen-md: 992px;
+$screen-lg: 1200px;
+$screen-xs-max: $screen-sm - 1;
+$screen-sm-max: $screen-md - 1;
+$screen-md-max: $screen-lg - 1;
