--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -64,10 +64,12 @@
 .latest_auctions {
   flex-grow: 1;
   justify-content: space-evenly;
-  padding-left: 30px;
+  padding-left: 40px;
+  padding-right: 75px;
   background-color: #F7F7F7;
   box-shadow: 0 4px 4px -2px rgba(92,94,102,0.15);
   z-index: 1;
+  width: 400px;
 
   &-auction {
     display: flex;
@@ -77,7 +79,8 @@
     position: relative;
     overflow: hidden;
     height: 82px;
-    width: 82px;
+    display: flex;
+    flex: 1 0 82px;
 
     img {
       position: absolute;
@@ -103,11 +106,11 @@
   }
 
   &-auction {
-    padding: 10px 77px 10px 10px;
+    padding: 10px 0 10px 0;
   }
 
   &-heading {
-    padding: 10px 77px 10px 10px;
+    padding: 10px 0 10px 0;
     display: flex;
     justify-content: space-between;
   }
@@ -121,8 +124,16 @@
     color: $color-manatee;
   }
 
+  &-separator {
+    padding: 0 10px;
+  }
+
   .left, .right {
-    width: 50%;
+    width: 80px;
+  }
+
+  &-small {
+    display: flex;
   }
 
   small {
