--- a/src/app.scss
+++ b/src/app.scss
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,600');
 
-@import "styles/reset";
-@import "styles/normalize";
+// @import "styles/reset";
+// @import "styles/normalize";
 @import "styles/utlis";
-@import "styles/layout";
-@import "styles/typography";
+// @import "styles/layout";
+// @import "styles/typography";
 @import "styles/common";
 @import "styles/landing";
 @import "styles/blog";
-@import "styles/tabs";
+// @import "styles/tabs";
