--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,39 +1,47 @@
-* {
-  box-sizing: border-box;
+.no-padding {
+  padding: 0;
 }
 
-html, body {
-  background-color: $color-catskill-white;
-  font-size: $base-font-size;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+p {
+  margin: 0;
 }
 
-body, a {
-  font-family: $base-font-family;
-  line-height: $base-line-height;
-  color: $base-font-color;
-}
-
-img {
-  max-width: 100%;
-}
-
-.image {
-  width: 25%;
-  min-width: 250px;
-  height: auto;
-}
-
-.button {
-	height: 48px;
-	width: 225px;
-  font-size: 15px;
-	border: 2px solid #F3F3F3;
-	border-radius: 24px;
-	background-color: #FFFFFF;
-}
-
-.section_header {
-  padding-bottom: 25px;
-}
+// * {
+//   box-sizing: border-box;
+// }
+//
+// html, body {
+//   background-color: $color-catskill-white;
+//   font-size: $base-font-size;
+//   -webkit-font-smoothing: antialiased;
+//   -moz-osx-font-smoothing: grayscale;
+// }
+//
+// body, a {
+//   font-family: $base-font-family;
+//   line-height: $base-line-height;
+//   color: $base-font-color;
+// }
+//
+// img {
+//   max-width: 100%;
+// }
+//
+// .image {
+//   width: 25%;
+//   min-width: 250px;
+//   height: auto;
+// }
+//
+// .button {
+// 	height: 48px;
+// 	width: 225px;
+//   font-size: 15px;
+// 	border: 2px solid #F3F3F3;
+// 	border-radius: 24px;
+// 	background-color: #FFFFFF;
+// }
+//
+// .section_header {
+//   padding-bottom: 25px;
+// }
