--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -1,33 +1,8 @@
-.header {
-  box-shadow: 0 4px 4px -2px rgba(92,94,102,0.15);
-  padding: 28px 0;
-  position: relative;
-  z-index: 2;
-
-  &-nav {
-    justify-content: space-between;
-  }
-
-  &-logo img {
-    width: 200px;
-  }
-
-  &-links {
-    margin: auto 0;
-  }
-
-  &-link {
-    margin-left: 30px;
-    color: $color-manatee;
-    font-size: 15px;
-  }
-}
-
 .news_carousel {
-  display: flex;
-  width: 69%;
+  // display: flex;
+  // width: 69%;
   box-shadow: 0 4px 4px -2px rgba(92,94,102,0.15);
-  z-index: 1;
+  // z-index: 1;
 
   &-element {
     height: 500px;
@@ -62,25 +37,27 @@
 }
 
 .latest_auctions {
-  flex-grow: 1;
-  justify-content: space-evenly;
-  padding-left: 40px;
-  padding-right: 75px;
+  // flex-grow: 1;
+  // justify-content: space-evenly;
+  // padding-left: 40px;
+  // padding-right: 75px;
   background-color: #F7F7F7;
   box-shadow: 0 4px 4px -2px rgba(92,94,102,0.15);
-  z-index: 1;
-  width: 400px;
+  height: 100%;
+  // z-index: 1;
+  // width: 400px;
 
   &-auction {
     display: flex;
+    height: 82px;
   }
 
   &-image {
     position: relative;
     overflow: hidden;
-    height: 82px;
+    // height: 82px;
     display: flex;
-    flex: 1 0 82px;
+    // flex: 1 0 82px;
 
     img {
       position: absolute;
@@ -89,8 +66,8 @@
       min-width: 100%;
       min-height: 100%;
       display: block;
-      max-width: 150px;
-      max-height: 150px;
+      max-width: 120px;
+      max-height: 120px;
       left: 50%;
       top: 50%;
       -webkit-transform: translate(-50%, -50%);
@@ -100,23 +77,28 @@
     }
   }
 
-  &-content {
-    padding-left: 20px;
+  &-wrapper {
+    padding-left: 30px;
     flex: 1 1 auto;
+    justify-content: space-evenly;
   }
 
-  &-auction {
-    padding: 10px 0 10px 0;
+  &-content {
+    // padding-left: 20px;
+    // flex: 1 1 auto;
   }
 
   &-heading {
-    padding: 10px 0 10px 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 0;
     display: flex;
-    justify-content: space-between;
+    flex: 0 0 auto;
   }
 
   &-house {
     font-size: 16px;
+    margin: 0;
 
     a {
       display: flex;
@@ -127,6 +109,7 @@
   &-category {
     font-size: 14px;
     color: $color-manatee;
+    margin: 0;
   }
 
   &-separator {
@@ -148,15 +131,14 @@
 
 .adw_top {
   display: flex;
-  align-self: center;
-  width: 50%;
-  height: 150px;
+  width: 100%;
+  height: 180px;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .search_box {
-  width: 90%;
+  // width: 90%;
   display: flex;
   justify-content: center;
   align-self: center;
@@ -200,13 +182,11 @@
 
   &-auctions {
     flex-wrap: wrap;
-    margin: 20px -25px;
     margin-top: 0;
   }
 
   &-auction {
-    width: 33.3%;
-    padding: 0 26px 40px;
+    padding-bottom: 30px;
   }
 
   &-image {
@@ -214,7 +194,7 @@
     overflow: hidden;
     height: 200px;
     width: 100%;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
+    box-shadow: 0 2px 6px 1px rgba(92,94,102,0.15);
 
     img {
       position: absolute;
@@ -247,8 +227,19 @@
       }
     }
 
-    h4 {
-      padding: 5px 0;
+    .btn {
+      display: inline-block;
+      width: 225px;
+    }
+  }
+
+  &-title {
+    padding: 5px 0;
+    margin: 0;
+
+    a {
+      display: flex;
+      width: 100%;
     }
   }
 
