--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,9 +1,11 @@
-.no-padding {
-  padding: 0;
-}
+.Landing {
+  .no-padding {
+    padding: 0;
+  }
 
-p {
-  margin: 0;
+  p {
+    margin: 0;
+  }
 }
 
 // * {
