--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -1,4 +1,4 @@
-.news_carousel {
+.Landing .news_carousel {
   // display: flex;
   // width: 69%;
   box-shadow: 0 4px 4px -2px rgba(92,94,102,0.15);
@@ -36,7 +36,7 @@
   }
 }
 
-.latest_auctions {
+.Landing .latest_auctions {
   // flex-grow: 1;
   // justify-content: space-evenly;
   // padding-left: 40px;
@@ -129,7 +129,7 @@
   }
 }
 
-.adw_top {
+.Landing .adw_top {
   display: flex;
   width: 100%;
   height: 180px;
@@ -137,7 +137,7 @@
   background-size: cover;
 }
 
-.search_box {
+ .Landing .search_box {
   // width: 90%;
   display: flex;
   justify-content: center;
@@ -175,7 +175,7 @@
   }
 }
 
-.auctions_promoted {
+.Landing .auctions_promoted {
   &-title {
     padding-top: 70px;
   }
@@ -254,7 +254,7 @@
   }
 }
 
-.auctions_category {
+.Landing .auctions_category {
 
   &-title {
     padding-top: 80px;
