--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -6,6 +6,19 @@
   p {
     margin: 0;
   }
+
+  .app__header {
+    margin-bottom: 0;
+  }
+
+  .search__header {
+    padding-top: 60px;
+    padding-bottom: 20px;
+  }
+
+  .section_header {
+    padding-bottom: 20px;
+  }
 }
 
 // * {
