--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -55,9 +55,9 @@
   &-image {
     position: relative;
     overflow: hidden;
-    // height: 82px;
+    height: 82px;
     display: flex;
-    // flex: 1 0 82px;
+    border-radius: 3px;
 
     img {
       position: absolute;
@@ -195,6 +195,7 @@
     height: 200px;
     width: 100%;
     box-shadow: 0 2px 6px 1px rgba(92,94,102,0.15);
+    border-radius: 3px;
 
     img {
       position: absolute;
@@ -221,6 +222,7 @@
     p {
       display: flex;
       justify-content: space-between;
+      color: $color-manatee;
 
       small {
         font-size: 12px;
@@ -230,6 +232,7 @@
     .btn {
       display: inline-block;
       width: 225px;
+      margin-top: 20px;
     }
   }
 
@@ -256,8 +259,20 @@
 
 .Landing .auctions_category {
 
+  &-house {
+    font-size: 15px;
+    margin: 0;
+    padding: 6px 0px;
+  }
+
   &-title {
-    padding-top: 80px;
+    display: flex;
+    width: 100%;
+    color: $color-manatee;
+  }
+
+  &-city {
+    color: $color-manatee;
   }
 
   &-auctions {
@@ -280,7 +295,7 @@
     	border: 2px solid #F3F3F3;
     	border-radius: 3.2px;
     	background-color: #FBFCFD;
-    	box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
+    	box-shadow: 0px 2px 4px -3px rgba(0, 0, 0, 0.5);
       justify-content: center;
     }
 
@@ -315,6 +330,7 @@
 
   &-date {
     width: 100px;
+    color: $color-manatee;
   }
 
   &-image {
@@ -322,7 +338,8 @@
     overflow: hidden;
     height: 150px;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    border-radius: 3px;
 
     img {
       position: absolute;
